@startuml

title __DATABASE's Class Diagram__\n

  package ca.rededaniskal {
    package ca.rededaniskal.Database {
      class AddBookDb {
          ~ db : FirebaseDatabase
          ~ bookRef : DatabaseReference
          ~ success : String
          + AddBookDb()
          + addBookToDatabase()
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Database {
      class Data_Map {
          - urls : HashMap<Integer, String>
          + Data_Map()
          + getUrls()
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Database {
      class Data_Provider {
          ~ urls : HashMap<Integer, String>
          ~ context : Context
          + Data_Provider()
          + startListening()
          + setBook_list()
          + Data_Provider()
          + startSingleListening()
          + getBook_list()
          + setBook_instance()
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Database {
      class Get_All_Books_Data {
          ~ continuous : boolean
          + Get_All_Books_Data()
          + synchronizeBooks()
          + getAll_books_data()
          + setAll_books_data()
          - loadSampleData()
          + quit()
      }
    }
  }
  

  Data_Provider o-- Book_Instance : book_instance
  Data_Provider o-- Book_List : book_list
  Get_All_Books_Data o-- Book_List : all_books_data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
